// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Actions 1. verify SEARCH 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 0,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 0,
}
`;

exports[`Search Actions 2. verify SEARCH 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 1,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 0,
}
`;

exports[`Search Actions 3. verify SEARCH 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 2,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 0,
}
`;

exports[`Search Actions 4. verify SEARCH 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 3,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 0,
}
`;

exports[`Search Actions 5. verify SEARCH 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 4,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 0,
}
`;

exports[`Search Actions 6. verify SET_SELECTED_TAB 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "",
  "selectedTab": 2,
}
`;

exports[`Search Actions 7. verify SET_SELECTED_TAB 1`] = `
Object {
  "all": "Enter min 2 characters",
  "cash": "Enter min 2 characters",
  "commodity": "Enter min 2 characters",
  "currency": "Enter min 2 characters",
  "enableLog": false,
  "event": Object {},
  "fno": "Enter min 2 characters",
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "a",
  "selectedTab": 2,
}
`;

exports[`Search Actions 8. verify SET_SELECTED_TAB 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 2,
}
`;

exports[`Search Actions 9. verify SET_SEARCH_TEXT 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": undefined,
    "state": false,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "aghs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 10. verify SEARCH_SUCCESS when mode is 0 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 11. verify SEARCH_SUCCESS when mode is 1 1`] = `
Object {
  "all": Array [],
  "cash": Array [
    Array [
      1,
      2,
    ],
  ],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 12. verify SEARCH_SUCCESS when mode is 2 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 13. verify SEARCH_SUCCESS when mode is 3 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 14. verify SEARCH_SUCCESS when mode is 4 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 15. verify SEARCH_FAILURE when mode is 0 1`] = `
Object {
  "all": Object {
    "result": Array [],
  },
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 16. verify SEARCH_FAILURE when mode is 1 1`] = `
Object {
  "all": Array [],
  "cash": Object {
    "result": Array [
      Array [
        1,
        2,
      ],
    ],
  },
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 17. verify SEARCH_FAILURE when mode is 2 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Object {
    "result": Array [],
  },
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 18. verify SEARCH_FAILURE when mode is 3 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Object {
    "result": Array [],
  },
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 19. verify SEARCH_FAILURE when mode is 4 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Object {
    "result": Array [],
  },
  "currency": Array [],
  "enableLog": false,
  "event": undefined,
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 20. verify CLEAR_SEARCH_STATE 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 0,
    "state": false,
  },
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "",
  "selectedTab": 0,
}
`;

exports[`Search Actions 21. verify NEWS_SUCCESS 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 1,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 22. verify default case 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 23. verify CLEAR_RESULT 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "abs",
  "selectedTab": 0,
}
`;

exports[`Search Actions 24. verify SET_SEARCH_TEXT 1`] = `
Object {
  "all": "Enter min 2 characters",
  "cash": "Enter min 2 characters",
  "commodity": "Enter min 2 characters",
  "currency": "Enter min 2 characters",
  "enableLog": false,
  "event": Object {},
  "fno": "Enter min 2 characters",
  "index": 3,
  "loading": Object {
    "key": undefined,
    "state": false,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "",
  "selectedTab": 0,
}
`;

exports[`Search Actions 25. verify search 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": Object {
    "key": 0,
    "state": true,
  },
  "news": Array [],
  "recentSearchVisible": false,
  "searchText": "as",
  "selectedTab": 1,
}
`;

exports[`Search Actions 26. verify search 1`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": Array [],
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "",
  "selectedTab": 0,
}
`;

exports[`Search Actions 26. verify search 2`] = `
Object {
  "all": Array [],
  "cash": Array [],
  "commodity": Array [],
  "currency": Array [],
  "enableLog": false,
  "event": Object {},
  "fno": Array [],
  "index": 3,
  "loading": false,
  "news": Array [],
  "recentSearchVisible": true,
  "searchText": "",
  "selectedTab": 0,
}
`;
